-------------------------------------------------------------------
Tue Sep  10:13:52 UTC 2015 - schubi@suse.com

- Handle mixed multiversion packages (fate#318778)
- 2.48.0

-------------------------------------------------------------------
Wed Jul  8 08:47:43 UTC 2015 - mvidner@suse.com

- Added option "Dependencies/Install Recommended Packages",
  (PKGMGR_RECOMMENDED) (boo#900853).
- Changed "Dependencies/Install Recommeded Packages for Already
  Installed Packages" from an option to a command (boo#902394).
- 2.47.0

-------------------------------------------------------------------
Tue Jan 20 16:13:52 UTC 2015 - mvidner@suse.com

- Fixed building with cmake 3.1 (PREFIX in spec, boo#911875).
- 2.46.2

-------------------------------------------------------------------
Mon Jul 28 11:45:50 UTC 2014 - mvidner@suse.com

- Recommend this package when yast2-packager and libyui-ncurses are
  installed (bnc#888300)
- 2.46.1

-------------------------------------------------------------------
Wed Jan  8 22:06:52 CET 2014 - mvidner@suse.com

- adjusted to libyui so version 6
- 2.46.0

-------------------------------------------------------------------
Wed Nov 20 13:04:31 CET 2013 - gs@suse.de

- Fixed typos in help text, rephrase text (bnc #839689)
- Version 2.45.0

-------------------------------------------------------------------
Wed Jul 31 15:47:16 CEST 2013 - gs@suse.de

- Online Update: show multi version packages correctly
- Version 2.44.4

-------------------------------------------------------------------
Tue Jul 24 11:56:24 CEST 2013 - gs@suse.de

- Online Update: improve help, show column 'Kind' beside 'Name',
  Package Selector: get lists of orphaned, suggested, recommended
  and unneeded packages correctly
- Version 2.44.3

-------------------------------------------------------------------
Thu Jul 11 14:06:27 CEST 2013 - gs@suse.de

- Online Update: show irrelevant patches only in list 'All Patches',