@@ -2,6 +2,8 @@
 Tue Sep  10:13:52 UTC 2015 - schubi@suse.com
 
 - Handle mixed multiversion packages (fate#318778)
+- Allow to delete single versions of multiversion packages.
+  (bsc#943870)
 - 2.48.0
 
 -------------------------------------------------------------------
